# OpenGLProjects

./: .gitignore  CMakeLists.txt
include/: graphics.h  shaders.h  textures.h  uniforms.h  utilities.h
src/: hellotriangles.cpp  helloworld.cpp  shaderpractice.cpp  texture.cpp  transformations.cpp
